Added LinkedIn profile link

--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
             </a>
           </li>
 
-          <!--<li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+          <li class="social-item">
+            <a target="_blank" href="https://www.linkedin.com/in/gsolo2001/" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
-          </li>-->
+          </li>
 
           <li class="social-item">
             <a target="_blank" href="https://www.instagram.com/gsolo2001/" class="social-link">
@@ -224,7 +224,7 @@
 						I'm a recent Computer Science graduate from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a>, and in addition to pursuing my B.S. degree over the past 3 years, I've also been working in the university's Division of Information Technology to gain hands-on experience.
 					</p>
 					<p>
-						I'm currently the IT manager for the unversity's help desk. It's my job to hire, train, and manage all of our agents as well as supporting them with any escalated issues they encounter.
+						I'm currently the IT manager for the university's help desk. It's my job to hire, train, and manage all of our agents as well as supporting them with any escalated issues they encounter.
 					</p>
         </section>
 
