Added OG protocol image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<meta property="og:title" content="Grant Solomon"/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://gsolo2001.github.io/"/>
-	<meta property="og:image" content="./assets/images/logo.ico"/>
+	<meta property="og:image" content="./assets/images/logo-og-protocol.png"/>
 			<meta property="og:image:type" content="image/png" />
 			<meta property="og:image:alt" content="Grant Solomon" />
 	<meta property="og:description" content="Portfolio website for Grant Solomon, a talented computer scientist and coding enthusiast." />
