Added JavaFX experience

--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@
 				</header>
 				
 				<section class="article-content">
-					<p>To practice and improve our agile software development skills, I worked with a small team to design and develop a software that would allow you to manage a network of vending machines. We coded the project in Java using <a target="_blank" href="https://www.eclipse.org/downloads/" external-link>Eclipse IDE</a> and focused on back-end features such as data permanence and proper code structure. Throughout the project, we used <a target="_blank" href="https://github.com/gsolo2001" external-link>GitHub</a> for version control and also to track tasks and organize our sprints.</p>
+					<p>To practice and improve our agile software development skills, I worked with a small team to design and develop a software that would allow you to manage a network of vending machines. We coded the project in Java using <a target="_blank" href="https://www.eclipse.org/downloads/" external-link>Eclipse IDE</a> and <a target="_blank" href="https://openjfx.io/" external-link>JavaFx</a> and focused on back-end features such as data permanence and proper code structure. Throughout the project, we used <a target="_blank" href="https://github.com/gsolo2001" external-link>GitHub</a> for version control and also to track tasks and organize our sprints.</p>
 					
 					<figure class="article-img">
 						<a target="_blank" href="./assets/images/vending-machine-class-diagram.jpg"><img src="./assets/images/vending-machine-class-diagram.jpg" alt="class diagram" loading="lazy"></a>
