Updated portfolio after leaving VSU

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Grant Solomon</h1>
+          <h1 class="name" title="Grant Solomon">Grant Solomon</h1>
 
-          <p class="title">IT Help Desk Manager</p>
+          <p class="title">IT Professional</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -86,7 +86,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:grantsolomon3601@gmail.com" class="contact-link">grantsolomon3601@gmail.com</a>
+              <a href="mailto:gsolo2001@outlook.com" class="contact-link">gsolo2001@outlook.com</a>
             </div>
 
           </li>
@@ -221,10 +221,10 @@
 
         <section class="about-text">
 					<p>
-						I'm a recent Computer Science graduate from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a>, and in addition to pursuing my B.S. degree over the past 3 years, I've also been working in the university's Division of Information Technology to gain hands-on experience.
+						I graduated <em>Magna cum Laude</em> from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a> with my B.S. in Computer Science. I worked my way though classes as the university's IT Help Desk manager.
 					</p>
 					<p>
-						I'm currently the IT manager for the university's help desk. It's my job to hire, train, and manage all of our agents as well as supporting them with any escalated issues they encounter.
+                        I recently joined the team of a local event production company as their shop manager. It's my job to manage all the AV equipment we work with.
 					</p>
         </section>
 
@@ -242,15 +242,21 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-photo.svg" alt="design icon" width="40">
               </div>
 
-              <div class="service-content-box">
+             <!--<div class="service-content-box">
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
                   I am a designer and editor of the Valdosta State University website and have worked on <a onClick="goToPortfolioFilter('web design');" external-link >several personal projects</a>.
+                </p>
+              </div>-->
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Audiovisual Production</h4>
+
+                <p class="service-item-text">
+                  I am focusing my career towards a technology in the ministry field. Currently, I'm apprenticing under the AV director of my church while also working with a local event production company.
                 </p>
               </div>
 
@@ -258,7 +264,7 @@
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+              <!--<div class="service-icon-box">
                 <img src="./assets/images/icon-manage.svg" alt="system management icon" width="40">
               </div>
 
@@ -266,7 +272,19 @@
                 <h4 class="h4 service-item-title">System management</h4>
 
                 <p class="service-item-text">
-									I designed and manage Valdosta State University's ticketing system (<a target="_blank" href="https://www.ivanti.com/products/ivanti-neurons-itsm" external-link>Ivanti Neurons for ITSM</a>) and two-factor management system (<a target="_blank" href="https://duo.com/" external-link>Duo</a>).
+                  I designed and managed Valdosta State University's ticketing system (<a target="_blank" href="https://www.ivanti.com/products/ivanti-neurons-itsm" external-link>Ivanti Neurons for ITSM</a>) and two-factor management system (<a target="_blank" href="https://duo.com/" external-link>Duo</a>).
+                </p>
+              </div>-->
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-midi.svg" alt="midi icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Music production</h4>
+
+                <p class="service-item-text">
+                  I recently discovered that creating music is a passion of mine and have fallen down the rabbit hole of producing music. I don't have anything to show off yet, but check back soon!
                 </p>
               </div>
 
@@ -282,7 +300,7 @@
                 <h4 class="h4 service-item-title">Application development</h4>
 
                 <p class="service-item-text">
-                  I developed several desktop and mobile applications throughout my college career and continue to hone my skills through <a onClick="goToPortfolioFilter('applications');" external-link>various projects</a>.
+                  I developed various desktop and mobile applications throughout my college career and continue to hone my skills through <a onClick="goToPortfolioFilter('applications');" external-link>various projects</a>.
                 </p>
               </div>
 
@@ -298,7 +316,7 @@
                 <h4 class="h4 service-item-title">Graphic design</h4>
 
                 <p class="service-item-text">
-                  I create high-quality, professional digital graphics for Valdosta State University and other freelance clients.
+                  I create high-quality, professional digital graphics. My clients have included Valdosta State University, my church, and several local businesses.
                 </p>
               </div>
 
@@ -544,7 +562,7 @@
               <span>May 2022</span>
 
               <p class="timeline-text">
-                I graduated Magna Cum Laude from Valdosta State University in May of 2022 with my Bachelors of Science in Computer Science.
+                I graduated <em>Magna cum Laude</em> from Valdosta State University in May 2022 with my Bachelors of Science in Computer Science.
               </p>
 
             </li>
@@ -578,16 +596,40 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">IT Help Desk Manager</h4>
+              <h4 class="h4 timeline-item-title">Shop Manager</h4>
 
-              <span>August 2021 — Present</span>
+              <span>March 2023 — Present</span>
 
               <p class="timeline-text">
-                I've been serving in the role of IT manager for the help desk of Valdosta State University for almost 2 years. My main duties are the hiring, training, and management of our technicians as well as managing our university's ticketing system, <a target="_blank" href="https://www.ivanti.com/products/ivanti-neurons-itsm" external-link>Ivanti Neurons for ITSM</a>.
+                I recently joined the team of a local event production company as their shop manager. It's my job to maintain, repair, and catalog all our AV equipment.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Assistant AV Technician</h4>
+
+              <span>March 2023 — Present</span>
+
+              <p class="timeline-text">
+                I'm apprenticing under the AV director of my church. My primary purpose is to learn more about AV in ministry and become familiar with all the technologies involved.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">IT Help Desk Manager</h4>
+
+              <span>August 2021 — March 2023</span>
+
+              <p class="timeline-text">
+                I served in the role of IT manager for the help desk of Valdosta State University for almost 2 years. My main duties were the hiring, training, and management of our technicians as well as managing our university's ticketing system, <a target="_blank" href="https://www.ivanti.com/products/ivanti-neurons-itsm" external-link>Ivanti Neurons for ITSM</a>.
               </p>
 							
 							<p class="timeline-text" style="margin-top: 15px;">
-								In addition to strong communication skills, my time at the help desk has also taught me the importance of building relationships both with clients and with your coworkers. These relationships have provided many opportunities for me to gain a variety of experiences, including:
+								In addition to strong communication skills, my time at the help desk also taught me the importance of building relationships both with clients and with your coworkers. These relationships provided many opportunities for me to gain a variety of experiences, including:
 								<ul class="timeline-text">
 									<li>Representing IT for presentations to our campus body and focus groups</li>
 									<li>Delegating for our Information Security division to notify and enforce cybersecurity policy</li>
@@ -880,6 +922,24 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="applications">
+              <a onClick="goToPage('ivanti-neurons')">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/vsu-footer.png" alt="skyline" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Ivanti Neurons for ITSM</h3>
+
+                <p class="project-category">Web applications</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="web design">
               <a target="_blank" href="https://www.seedsofsalvationco.com">
 
@@ -984,24 +1044,6 @@
                 <h3 class="project-title">Supernova</h3>
 
                 <p class="project-category">Games</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a onClick="goToPage('ivanti-neurons')">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/vsu-footer.png" alt="skyline" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Ivanti Neurons for ITSM</h3>
-
-                <p class="project-category">Web applications</p>
 
               </a>
             </li>
