Updated site information

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<meta property="og:image" content="./assets/images/logo-og-protocol.png"/>
 			<meta property="og:image:type" content="image/png" />
 			<meta property="og:image:alt" content="Grant Solomon" />
-	<meta property="og:description" content="Portfolio website for Grant Solomon, a talented computer scientist and coding enthusiast." />
+	<meta property="og:description" content="Portfolio website for Grant Solomon, a dedicated computer scientist and coding enthusiast." />
 </head>
 
 <body>
@@ -221,10 +221,10 @@
 
         <section class="about-text">
 					<p>
-						I graduated <em>Magna cum Laude</em> from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a> with my B.S. in Computer Science. I worked my way though classes as the university's IT Help Desk manager.
+						I graduated <em>Magna cum Laude</em> from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a> with my B.S. in Computer Science. I worked my way though classes as the university's IT Help Desk Manager.
 					</p>
 					<p>
-                        I recently joined the team of a local event production company as their shop manager. It's my job to manage all the AV equipment we work with.
+						I currently work with a local event production company as their shop manager. It's my job to manage all our audiovisual equipment, including cataloging, maintenance, and overall upkeep, as well as setting up and running the various events that we produce.
 					</p>
         </section>
 
