--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <section class="about-text">
 					<p>
-						I graduated <em>Magna cum Laude</em> from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a> with my B.S. in Computer Science. I worked my way though classes as the university's IT Help Desk Manager.
+						I graduated <em>Magna cum Laude</em> from <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State University</a> with my B.S. in Computer Science and worked as the university's IT Help Desk Manager while taking my classes.
 					</p>
 					<p>
 						I currently work with a local event production company as their shop manager. It's my job to manage all our audiovisual equipment, including cataloging, maintenance, and overall upkeep, as well as setting up and running the various events that we produce.
@@ -256,7 +256,7 @@
                 <h4 class="h4 service-item-title">Audiovisual Production</h4>
 
                 <p class="service-item-text">
-                  I am focusing my career towards a technology in the ministry field. Currently, I'm apprenticing under the AV director of my church while also working with a local event production company.
+                  To focus my career towards technology in the ministry field, I'm apprenticing under the AV director of my church and also working with a local event production company.
                 </p>
               </div>
 
@@ -313,10 +313,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Graphic design</h4>
+                <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  I create high-quality, professional digital graphics. My clients have included Valdosta State University, my church, and several local businesses.
+                  I've enjoyed creating modern, responsive websites since I started learning to code at the age of 12. I became experienced by helping design the website for Valdosta State Univeristy and now continue to work on <a onClick="goToPortfolioFilter('web design');" external-link >various other projects</a>.
                 </p>
               </div>
 
@@ -601,7 +601,7 @@
               <span>March 2023 — Present</span>
 
               <p class="timeline-text">
-                I recently joined the team of a local event production company as their shop manager. It's my job to maintain, repair, and catalog all our AV equipment.
+                I recently joined the team of a local event production company as their shop manager. It's my job to maintain, repair, and catalog all our audiovisual equipment.
               </p>
 
             </li>
@@ -613,7 +613,7 @@
               <span>March 2023 — Present</span>
 
               <p class="timeline-text">
-                I'm apprenticing under the AV director of my church. My primary purpose is to learn more about AV in ministry and become familiar with all the technologies involved.
+                I'm apprenticing under the AV director of my church. My primary purpose is to learn more about the audiovisual aspects of ministry and learn where my skills are best utilized.
               </p>
 
             </li>
