Fixed web design description length

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  I've enjoyed creating modern, responsive websites since I started learning to code at the age of 12. I became experienced by helping design the website for Valdosta State Univeristy and now continue to work on <a onClick="goToPortfolioFilter('web design');" external-link >various other projects</a>.
+                  I enjoy creating modern, responsive websites and became experienced by helping design the website for Valdosta State Univeristy. Now, I continue to work on <a onClick="goToPortfolioFilter('web design');" external-link >various other projects</a>.
                 </p>
               </div>
 
