--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  I enjoy creating modern, responsive websites and became experienced by helping design the website for Valdosta State Univeristy. Now, I continue to work on <a onClick="goToPortfolioFilter('web design');" external-link >various other projects</a>.
+                  I enjoy creating modern, responsive websites and became experienced by helping design the <a target="_blank" href="https://www.valdosta.edu/" external-link>Valdosta State website</a>. Now, I continue to work on <a onClick="goToPortfolioFilter('web design');" external-link >various other projects</a>.
                 </p>
               </div>
 
